Fixing spacing between lines on title

--- a/src/app/header/header/header.component.css
+++ b/src/app/header/header/header.component.css
@@ -18,6 +18,7 @@ img {
 .titleText {
   font-size: 200%;
   font-weight: bold;
+  line-height: 1.4;
 }
 
 .divForIntro {
